--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/seba/Library/Application Support/NetBeans/21/build.properties
+user.properties.file=C:\\Users\\sebas\\AppData\\Roaming\\NetBeans\\21\\build.properties
